<resources>
    <string name="app_name">Story App</string>
    <string name="password_error">password tidak boleh kurang dari 8</string>
    <string name="bearer">"Bearer "</string>
    <string name="ed_name_hints">Nama</string>
    <string name="ed_email_hints">Email</string>
    <string name="ed_password_hints">Password</string>
    <string name="text_login">login</string>
    <string name="text_register">Daftar</string>
    <string name="welcome_title">Selamat Datang di Aplikadi Story</string>
    <string name="welcome_description">Dapatkan pengalaman untuk membagikan story kepada pengguna lainnya</string>
    <string name="preview_img_desc">Preview image</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">gallery</string>
    <string name="text_description">Deskripsi</string>
    <string name="text_upload">Unggah</string>
    <string name="capture_desc">Ambil Foto</string>
    <string name="switch_cam_desc">Tukar kamera</string>
    <string name="img_detail_desc">Gambar dari cerita</string>
    <string name="login_title_desc">Masukkan Email dan password kamu untuk memulai!</string>
    <string name="img_login_desc">Isi Form Login</string>
    <string name="fab_desc">Tambah Cerita</string>
    <string name="img_register_desc">Isi form untuk daftar</string>
    <string name="register_title_desc">Silahkan Lengkapi data diri kamu untuk mendaftar!</string>
    <string name="img_welcome_desc">Selamat Datang</string>
    <string name="item_img_desc">Gambar dari Cerita</string>
    <string name="permission_text">Tidak mendapatkan permission.</string>
    <string name="add_success_text">Berhasil melakukan upload</string>
    <string name="input_image_text">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="add_failure_text">Gagal menambahkan cerita</string>
    <string name="camera_failure_text">Gagal memunculkan kamera.</string>
    <string name="take_photo_fail_text">Gagal mengambil gambar.</string>
    <string name="take_photo_success_text">Berhasil mengambil gambar.</string>
    <string name="login_success_text">Berhasil Login</string>
    <string name="login_failure_text">Gagal Login</string>
    <string name="email_error">Tolong masukkan email</string>
    <string name="password_empty_error">Tolong masukkan password</string>
    <string name="success_get_story">Berhasil menampilkan cerita!</string>
    <string name="failed_get_story">Gagal menampilkan cerita</string>
    <string name="email_error_format">Email tidak sesuai</string>
    <string name="register_success">Berhasil Mendaftar!</string>
    <string name="register_failed">Gagal Mendaftar</string>
    <string name="name_error">Masukkan nama!</string>
    <string name="date_text">Dibuat pada %1$s</string>
    <string name="add_story_title">Tambah Cerita</string>
    <string name="detail_title">Detail Cerita</string>
    <string name="retry">Coba lagi!</string>
</resources>